--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Indian Dishes",
+  "name": "Indian dishes catalog, search anf filter to get the dish details.",
   "icons": [
     {
       "src": "favicon.ico",
